# ParquetCsvConverter

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  release.sh  rules_example.json
src/: __init__.py  cli.py  converter.py  models.py
tests/: conftest.py  test_cli.py  test_converter.py  test_models.py
