[project]
name = "parquet-csv-converter"
version = "0.1.2"
description = "Bidirectional Parquet ↔ CSV converter with column mapping and date rules"
requires-python = ">=3.13"
dependencies = [
    "polars==1.39.0",
    "pyarrow>=23.0.1",
]

[project.scripts]
parquet-csv-converter = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest==9.0.2"]
